--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git-learn</title>
+    <title>Git-learn-v2</title>
 </head>
 <body>
     <h1>Hello world!</h1>
